src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__chat_composer__tests__slash_popup_res.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /res                                                      "
"                                                            "
"                                                            "
"                                                            "
"  /resume  resume a saved chat                              "
